# ners586soil

./: .gitignore  README.md  hello.py  lab5.py  pyproject.toml  soilproject.py  testground.ipynb  utils.py
Background_RAW/: CH5@DT5730S_14249_EspectrumR_Background_20250408_163107.n42.xml  CH7@DT5730S_14249_EspectrumR_Background_20250408_163107.n42.xml  HcompassR_Background_20250408_163107.root
Energy_Cal_RAW/: CH0@DT5730S_14249_EspectrumR_Energy_Cal_20250408_155702.n42.xml  CH5@DT5730S_14249_EspectrumR_Energy_Cal_20250408_155702.n42.xml  CH7@DT5730S_14249_EspectrumR_Energy_Cal_20250408_155702.n42.xml  HcompassR_Energy_Cal_20250408_155702.root
Open_Pit_Mine_RAW/: CH5@DT5730S_14249_EspectrumR_Open_Pit_Mine_20250408_170902.n42.xml  CH6@DT5730S_14249_EspectrumR_Open_Pit_Mine_20250408_170902.n42.xml  CH7@DT5730S_14249_EspectrumR_Open_Pit_Mine_20250408_170902.n42.xml
calibration_bottles/: 2275411.csv  2275412.csv  2339311.csv  2339312.csv  2339314.csv  bottle_manifest-false.csv  bottle_manifest.csv
lab5/: .~lock.CH0_DT5730S_14249_EspectrumR_LYSO_Spectra_20250225_161903.txt3#  CH0_DT5730S_14249_EspectrumR_BGO_Spectra_20250225_163909.txt3  CH0_DT5730S_14249_EspectrumR_CsI_Spectra_20250225_163212.txt3  CH0_DT5730S_14249_EspectrumR_LYSO_Spectra_20250225_161903.txt3  CH0_DT5730_1783_EspectrumR_Background_20250225_172640.pt2  CH0_DT5730_1783_EspectrumR_Multisource_20250225_170726.pt2  CH0_DT5730_1783_EspectrumR_Mystery_Inc_20250225_172122.pt2  headBGO.csv
simulated_efficiencies/: cross_reg_1173.out  cross_reg_1333.out  cross_reg_356.out  cross_reg_662.out  cross_reg_81.out  (+2 more)
(+171 files in other folders)
