[project]
name = "586projectdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "becquerel>=0.6.0",
    "jupyter>=1.1.1",
    "lmfit>=1.3.3",
    "lxml>=5.3.2",
    "matplotlib>=3.10.1",
    "notebook>=7.4.0",
    "rase>=0.1.0",
]
